# Zephyr

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  cpp.hint
Test/: CMakeLists.txt
Test/src/: Bloom.cpp  ECS.cpp  Engine.cpp  FG.cpp  PBR.cpp  Shadow.cpp  Spirv_Reflection.cpp
Zephyr/: CMakeLists.txt
Zephyr/src/: pch.h
Zephyr/src/core/: Handle.h  macro.h
Zephyr/src/core/event/: EventSystem.cpp  EventSystem.h  KeyboardEvent.h  MouseEvent.h
Zephyr/src/core/log/: Logger.cpp  Logger.h
Zephyr/src/core/math/: AABB.h  Sphere.cpp  Sphere.h
Zephyr/src/engine/: Engine.cpp  Engine.h
Zephyr/src/framegraph/: Blackboard.cpp  Blackboard.h  DAG.cpp  DAG.h  FrameGraph.cpp  FrameGraph.h  FrameGraphPass.cpp  FrameGraphPass.h  FrameGraphResource.cpp  FrameGraphResource.h  PassNode.cpp  PassNode.h  ResourceNode.cpp  ResourceNode.h  VirtualResource.h
Zephyr/src/platform/: FileSystem.cpp  FileSystem.h  Path.cpp  Path.h  Window.cpp  Window.h
Zephyr/src/render/: Camera.cpp  Camera.h  Light.h  RenderResourceManager.cpp  RenderResourceManager.h  Renderer.cpp  Renderer.h
Zephyr/src/resource/: Buffer.cpp  Buffer.h  Material.cpp  Material.h  MaterialInstance.cpp  MaterialInstance.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  ResourceManager.cpp  ResourceManager.h  ShaderSet.cpp  ShaderSet.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
Zephyr/src/resource/preset/geometry/: BoxMesh.cpp  BoxMesh.h
Zephyr/src/rhi/: Driver.cpp  Driver.h  Handle.h  RHIBuffer.h  RHIEnums.h  RHIRenderTarget.cpp  RHIRenderTarget.h  RHIRenderUnit.cpp  RHIRenderUnit.h  RHIShaderSet.h  RHITexture.cpp  RHITexture.h
Zephyr/src/rhi/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommon.h  VulkanContext.cpp  VulkanContext.h  VulkanDriver.cpp  VulkanDriver.h  VulkanPipelineCache.cpp  VulkanPipelineCache.h  VulkanRenderPassCache.cpp  VulkanRenderPassCache.h  VulkanRenderTarget.cpp  VulkanRenderTarget.h  VulkanRenderUnit.h  VulkanSamplerCache.cpp  VulkanSamplerCache.h  VulkanShaderSet.cpp  VulkanShaderSet.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUtil.h  VulkanValidation.cpp  VulkanValidation.h
Zephyr/src/scene/: Entity.cpp  Entity.h  Scene.h
Zephyr/src/scene/component/: CameraControlComponent.h  Component.cpp  Component.h  DirectionalLightComponent.h  MainCameraComponent.h  MeshComponent.h  PointLightComponent.h  TransformComponent.h
Zephyr/src/scene/system/: Query.cpp  Query.h  System.cpp  System.h
Zephyr/src/scene/system/preset/: CameraControlSystem.cpp  CameraControlSystem.h  RenderSystem.cpp  RenderSystem.h
ZephyrApp/: CMakeLists.txt
ZephyrTool/: CMakeLists.txt  main.cpp
ZephyrTool/Common/: GraphicsCore.cpp  GraphicsCore.h
ZephyrTool/SpecularMapGenerator/: Executor.cpp  Executor.h  main.cpp
asset/cubemap/GraceCathedral/: light.txt
asset/cubemap/Indoor/: light.txt
asset/model/game_ready_scifi_helmet/: license.txt  scene.gltf
asset/model/pbr_kabuto_samurai_helmet/: license.txt  scene.gltf
asset/model/pp-91_kedr_machine_pistol_midpoly_gameready/: license.txt  scene.gltf
asset/model/venice_mask/: license.txt  scene.gltf
asset/shader/glsl/: bloomComposite.comp.glsl  bloomDownsample.comp.glsl  bloomPrefilter.comp.glsl  bloomUpsample.comp.glsl  (+15 more)
scripts/: shader_compile.bat  temp
(+20 files in other folders)
